# GUI

./: CMakeLists.txt  CMakePresets.json  Common.h  Element.h  Font.cpp  Font.h  FontDeprecated.cpp  FontDeprecated.h  FrameRateCalculator.cpp  FrameRateCalculator.h  GUI.sln  GUI.vcxproj  GUI.vcxproj.filters  IOEvents.h  Layer.cpp  Layer.h  Window.cpp  Window.h  WindowEvents.h  main.cpp
Rendering/: FlatTexture.cpp  FrameBuffer.h  Texture.cpp  Texture.h  TextureAtlas.h
Shaders/: FlatToScreen.shader  FlatToScreenProjection.shader  Highlight.shader  Quad.frag  Quad.frag.spv  Quad.vert  Quad.vert.spv  Text.frag  Text.shader  Text.vert  compile.bat
deprecated/Elements/: Button.h  Element.h
deprecated/Rendering/: AssetRepository.h  Billboard.h  FlatTexture.h  FrameBuffer.h  Renderer.h  Shader.h  StaticBillboard.h  Texture.h
deprecated/src/Rendering/: AssetRepository.cpp  Renderer.cpp  Shader.cpp  StaticBillboard.cpp  Texture.cpp
include/GUI/: Instance.h
include/GUI/Elements/: Element.h  QuadElement.h
include/GUI/Rendering/: Font.h  Quad.h  ShaderCache.h
include/GUI/TextRendering/: Font.h
install/: GUIConfig.cmake.in
install/clang-debug/include/GUI/: Common.h
install/clang-debug/include/GUI/Elements/Primitives/: QuadPrimitive.h
install/clang-debug/include/GUI/Rendering/: DefaultTextureCache.h  TextureDescriptor.h
install/clang-debug/include/GUI/TextRendering/: Font.h
install/clang-debug/include/Graphics/: Common.h  Enums.h  Flags.h  FunctionPointers.h  FunctionTable.h  Graphics.h  InstanceFunctionTable.h  StructTraits.h  Structs.h
install/clang-debug/include/Graphics/HandleTypes/: Buffer.h  CommandBuffer.h  CommandPool.h  DebugUtilsMessenger.h  DescriptorPool.h  DescriptorSet.h  Fence.h  FrameBuffer.h  Image.h  Instance.h  Memory.h  PhysicalDevice.h  PhysicalDeviceCache.h  Pipeline.h  Queue.h  RenderPass.h  Semaphore.h  Surface.h  SwapChain.h
install/clang-debug/include/Graphics/MemoryManagement/: MemoryPool.h
install/clang-debug/include/Graphics/PlatformManagement/: TypeDefinitionsWin32.h
install/clang-debug/include/Graphics/Utility/: BufferDataBuilders.h  Camera.h  Structs.h  Utility.h
install/clang-debug/include/Graphics/Wrappers/: DebugLogger.h  DeviceWrapper.h  InstanceWrapper.h  PipelineWrapper.h
install/clang-debug/include/harfbuzz/: hb-features.h
install/clang-debug/lib/cmake/harfbuzz/: harfbuzzConfig-debug.cmake  harfbuzzConfig.cmake
install/clang-debug/lib/pkgconfig/: freetype2.pc  harfbuzz-gpu.pc  harfbuzz-raster.pc  harfbuzz-subset.pc  harfbuzz-vector.pc  harfbuzz.pc
src/GUI/: Interface.cpp
src/GUI/Rendering/: Font.cpp
src/GUI/TextRendering/: Font.cpp  Text.cpp
tests/: Test.h  main.cpp
